--- a/170912/FDS6_assign-master/20170912/0912.css
+++ b/170912/FDS6_assign-master/20170912/0912.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
-
+@import url("./normalize.css");
+@import url("./reset.css");
 body {
   background: #555;
 }
@@ -8,7 +9,7 @@ body {
   background: #bbb;
   min-height: 200vh;
   width: 1000px;
-
+  margin: 0 auto;
 }
 
 .header {
@@ -20,20 +21,22 @@ body {
   position: fixed;
   border: 10px solid blue;
   font-size: 2.0rem;
+  top: 0;
+  left: 0;
 }
 
 .main-content {
   background: green;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-content: space-between;
+  justify-content: flex-start;
 }
 
-.main-content {
-}
+.main-content {}
 
-.news, .rank, .personel {
+.news,
+.rank,
+.personel {
   width: 300px;
   height: 300px;
   margin: 10px;
@@ -41,7 +44,9 @@ body {
 
 .news {
   background: aqua;
+  position: relative;
   order: 3;
+  left: 40px;
 }
 
 .rank {
@@ -56,8 +61,8 @@ body {
   background: red;
 }
 
-
 .info-list {
+  position: relative;
 }
 
 .info-list li {
@@ -66,8 +71,10 @@ body {
 
 .info-1 {
   top: 100px;
+  position: absolute;
 }
 
 .info-3 {
   top: 100px;
+  position: relative;
 }
