--- a/170920/0920.css
+++ b/170920/0920.css
@@ -29,7 +29,13 @@ a {
 }
 
 .list-box:hover,
-.list-box:focus {
+.list-box:focus,
+{
   height: 150px;
   background: skyblue;
+}
+
+.no:focus {
+  height: 150px;
+  background: skyblue !important;
 }
